@@ -1,10 +1,15 @@
 [buildout]
 develop = .
-parts = test python docs
+parts = test test_c_hookable python docs
+unzip = true
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.component [test,zcml]
+
+[test_c_hookable]
+recipe = zc.recipe.testrunner
+eggs = zope.component [test,zcml,hook]
 
 [python]
 recipe = zc.recipe.egg
