@@ -28,12 +28,12 @@ from zope.component.interfaces import IComponentLookup
 from zope.component.globalregistry import base
 from zope.component._declaration import adapter, adapts, adaptedBy
 
-# Try to be hookable. Do so in a try/except to avoid a hard dependency.
+# Use the C implementation in zope.hookable, if available;  fall back
+# to our Python version if not.
 try:
     from zope.hookable import hookable
 except ImportError:
-    def hookable(ob):
-        return ob
+    from zope.component.hookable import hookable
 
 # getSiteManager() returns a component registry.  Although the term
 # "site manager" is deprecated in favor of "component registry",
